Reworked all pages and changed header

--- a/src/content/pages/about.html
+++ b/src/content/pages/about.html
@@ -37,34 +37,35 @@ eleventyNavigation:
                 <h2 class="cs-title">Hire a property manager with a spirit of Excellence!
                 </h2>
                 <p class="cs-text">
-                    We offer Property Management services for Goodyear, Surprise, Litchfield Park, and Avondale!
+                  We make property management simple, stress-free, and profitable. From transparent pricing to in-person consultations, everything we do is built around your success.
                 </div>
         </div>
         <ul class="cs-card-group">
             <li class="cs-item">
                 <h3 class="cs-h3">
-                    How Much Does It Cost?
+                    Simple Pricing
                 </h3>
                 <p class="cs-item-text">
-                    We welcome and celebrate different perspectives to help our firm, our clients and our people achieve adip iscing elit enduring results.
+                  Our pricing is simple, transparent, and designed to reflect the quality of service we provide. While exact costs can vary based on the property and location, most of our owners pay a standard monthly rate along with a one-time leasing fee. We’d be happy to provide a detailed quote based on your specific property—just reach out and we’ll walk you through it!                  
                 </p>
             </li>
             <li class="cs-item">
                 <h3 class="cs-h3">
-                    Free Consultation
+                    No Upfront Fees
                 </h3>
                 <p class="cs-item-text">
-                    We welcome and celebrate different perspectives to help our firm, our clients and our people achieve adip iscing elit enduring results.
+                  We're confident in what we do, which is why we don’t charge you any fees fees until your home is rented and the tenant has officially moved in.  
+                  We truly care about our clients and stand behind the services we provide. If you’re not happy with how things are going, you can cancel at any time—no cancellation fees, no pressure.              
                 </p>
             </li>
             <li class="cs-item">
-                <h3 class="cs-h3">
-                    Satisfaction Gauranteed
-                </h3>
-                <p class="cs-item-text">
-                    We welcome and celebrate different perspectives to help our firm, our clients and our people achieve adip iscing elit enduring results.
-                </p>
-            </li>
+              <h3 class="cs-h3">
+                  Free Consultation
+              </h3>
+              <p class="cs-item-text">
+                We offer in-person consultations at your rental property, so we can meet you, see the home firsthand, and provide a personalized rental estimate. This helps us better understand your goals and recommend a strategy to maximize your rental income.
+              </p>
+          </li>
         </ul>
     </div>
 </section>
@@ -77,7 +78,9 @@ eleventyNavigation:
     <div class="cs-container">
         <div class="cs-content">
             <span class="cs-topper">Expert Property Management for the Phoenix Metro Area</span>
-            <h2 class="cs-title">Reliable, Hassle-Free, and Profitable Rental Management</h2>
+            <h2 class="cs-title">Full-Service Property Management You Can Count On
+
+            </h2>
             <picture class="cs-picture">
                 <!--Mobile Image-->
                 <source media="(max-width: 600px)" srcset="/assets/images/about-us2-m.png">
@@ -87,11 +90,14 @@ eleventyNavigation:
             </picture>
         </div>
         <div class="cs-stats-group">
-            <p class="cs-text">
-                We make owning rental property in the Phoenix area hassle-free and profitable, by keeping the total cost of ownership low.  Our philosophy is to manage your property professionally, economically and efficiently.  We will take care of your property by doing regular inspections, collecting the rent on time, handling maintenance issues promptly as they arise and keep you updated regularly.  We have built a great reputation in the Phoenix area by offering high quality property management service to our clients.  We have owned and managed hundreds of rental properties ourselves, and therefore know what clients expect and need from a property manager.                </p>
-            </p>
-            <p class="cs-text">
-                We offer comprehensive rental property management services for Scottsdale, AZ, Goodyear, AZ and the surrounding West Valley.  Our property management clients receive nothing but our very best. We are detail oriented property managers and you will enjoy working with us.  We offer full-service property management or leasing only services.  Put your trust in our hands, we have over 23 years of experience as Property Managers. We manage rental properties in Phoenix, Goodyear, Surprise, Scottsdale, Litchfield Park, and all of the West Valley.  Try us for your rental property management.....we're not like the others!             </p>
+          <p class="cs-text">
+            We make owning rental property in the Phoenix area simple, profitable, and stress-free by minimizing the total cost of ownership. Our philosophy is to manage every home professionally, efficiently, and with the same care we give our own. From regular inspections and prompt maintenance to on-time rent collection and proactive communication, we handle the details so you don’t have to. With a strong reputation for quality service, we’ve earned the trust of rental property owners throughout the Phoenix area.
+          </p>
+          
+          <p class="cs-text">
+            With over 28 years of experience and a history of managing hundreds of rental homes, we know exactly what property owners expect from a great management partner. When you work with us, you’ll receive responsive service, attention to detail, and expert care for your investment. We proudly serve Phoenix, Goodyear, Surprise, Scottsdale, Litchfield Park, and surrounding West Valley areas. Try us—you’ll quickly see why so many owners choose to stay with us.
+          </p>
+          
             <ul class="cs-stats">
                 <li class="cs-stat">
                     <span class="cs-number">400+</span>
@@ -118,14 +124,13 @@ eleventyNavigation:
     <div class="cs-content">
         <div class="cs-flex-wrapper">
             <div class="cs-flex">
-                <span class="cs-topper">Services</span>
+                <span class="cs-topper">What do we offer?</span>
                 <h2 class="cs-title">No-Hassle Property Management
             </div>
-            <a href="https://www.youtube.com/@cindiellis2042/featured" target="_blank" class="cs-button-solid">Watch Our Youtube Videos</a>
         </div>
         <div class="cs-wrapper">
             <p class="cs-text">
-                This is just some of the things that we do for our owners.
+              Here are just a few ways we support our property owners.
             </p>
             <ul class="cs-ul">
                 <li class="cs-li">
@@ -180,12 +185,12 @@ eleventyNavigation:
 <section id="contact-983">
     <div class="cs-container">
         <div class="cs-content">
-            <span class="cs-topper">Contact Us</span>
+            <span class="cs-topper">Free Consultation</span>
             <h2 class="cs-title">How Much Will My Home Rent For?</h2>
-            <h4 class="cs-text">Fill Out The Form and We'll Set Up A Free Consultation</h4>
+            <h4 class="cs-text">Fill out your info and we'll reach out to schedule a free rental evaluation.</h4>
         </div>
         <!--Form-->
-        <form class="cs-form" id="cs-form-983" name="Contact Form" method="post" netlify>
+        <form class="cs-form" id="cs-form-983" name="Rent Consultation Form" method="post" netlify>
             <label class="cs-label">
                 First Name
                 <input class="cs-input" required type="text" id="name-587-983" name="First Name" placeholder="First Name">
