--- a/src/content/pages/tenants.html
+++ b/src/content/pages/tenants.html
@@ -26,13 +26,13 @@ eleventyNavigation:
 <section id="services-1354">
     <div class="cs-container">
         <div class="cs-content">
-            <span class="cs-topper">Our Services</span>
+            <span class="cs-topper">Tenants Page</span>
             <h2 class="cs-title">We’re Committed to Deliver Top High Quality Services</h2>
         </div>
         <ul class="cs-card-group">
             <li class="cs-item">
-                <a href="https://www.paypal.com/ncp/payment/9RMEJ74HRU9LL" class="cs-link">
-                    <h3 class="cs-h3"><span class="cs-span">Pay </br>Application</span> Fees</h3>
+                <a href="https://sunseeker.appfolio.com/connect/users/sign_in" class="cs-link" target="_blank">
+                    <h3 class="cs-h3"><span class="cs-span">View </br>Tenant</span> Portal</h3>
                 </a>
                 <picture class="cs-background">
                     <source media="(max-width: 600px)" srcset="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/People/meeting1.jpg">
@@ -41,33 +41,33 @@ eleventyNavigation:
                 </picture>
             </li>
             <li class="cs-item">
-                <a href="https://sunseeker.appfolio.com/connect/users/sign_in" class="cs-link">
-                    <h3 class="cs-h3"><span class="cs-span">View </br>Tenant</span> Portal</h3>
+                <a href="https://www.paypal.com/ncp/payment/9RMEJ74HRU9LL" class="cs-link" target="_blank">
+                    <h3 class="cs-h3"><span class="cs-span">Pay </br>Application</span> Fees</h3>
                 </a>
                 <picture class="cs-background">
-                    <source media="(max-width: 600px)" srcset="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/People/meeting2.jpg">
-                    <source media="(min-width: 601px)" srcset="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/People/meeting2.jpg">
-                    <img decoding="async" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/People/meeting2.jpg" alt="construction" width="305" height="305" aria-hidden="true">
+                    <source media="(max-width: 600px)" srcset="/assets/images/pay-application-fee.png">
+                    <source media="(min-width: 601px)" srcset="/assets/images/pay-application-fee.png">
+                    <img decoding="async" src="/assets/images/pay-application-fee.png" alt="pay-application-fee" width="305" height="305" aria-hidden="true">
                 </picture>
             </li>
             <li class="cs-item">
-                <a href="/utility-info" class="cs-link">
+                <a href="/utility-info" class="cs-link" target="_blank">
                     <h3 class="cs-h3"><span class="cs-span">Utility</span> Info</h3>
                 </a>
                 <picture class="cs-background">
-                    <source media="(max-width: 600px)" srcset="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/People/meeting3.jpg">
-                    <source media="(min-width: 601px)" srcset="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/People/meeting3.jpg">
-                    <img decoding="async" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/People/meeting3.jpg" alt="construction" width="305" height="305" aria-hidden="true">
+                    <source media="(max-width: 600px)" srcset="/assets/images/utility.png">
+                    <source media="(min-width: 601px)" srcset="/assets/images/utility.png">
+                    <img decoding="async" src="/assets/images/utility.png" alt="construction" width="305" height="305" aria-hidden="true">
                 </picture>
             </li>
             <li class="cs-item">
-                <a href="/rentals" class="cs-link">
+                <a href="/rentals" class="cs-link" target="_blank">
                     <h3 class="cs-h3"><span class="cs-span">Apply For</br></span>A Rental</h3>
                 </a>
                 <picture class="cs-background">
-                    <source media="(max-width: 600px)" srcset="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/People/meeting4.jpg">
-                    <source media="(min-width: 601px)" srcset="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/People/meeting4.jpg">
-                    <img decoding="async" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/People/meeting4.jpg" alt="construction" width="305" height="305" aria-hidden="true">
+                    <source media="(max-width: 600px)" srcset="/assets/images/apply-for-rental.png">
+                    <source media="(min-width: 601px)" srcset="/assets/images/apply-for-rental.png">
+                    <img decoding="async" src="/assets/images/apply-for-rental.png" alt="apply-for-rental" width="305" height="305" aria-hidden="true">
                 </picture>
             </li>
         </ul>
