--- a/src/content/pages/utility-info.html
+++ b/src/content/pages/utility-info.html
@@ -27,9 +27,8 @@ eleventyNavigation:
 <section id="services-2221">
     <div class="cs-container">
         <div class="cs-content">
-            <span class="cs-topper">WHAT WE DO</span>
-            <h2 class="cs-title">Our Special Services for You</h2>
-            <div class="cs-text">Select your city to view a complete list of available utilities.</div>
+            <h2 class="cs-title">Simplifying the Utility Setup Process</h2>
+            <div class="cs-text">Choose the city you're moving to for a full list of utility providers.</div>
         </div>
         <ul class="cs-ul">
             <li class="cs-li">
@@ -47,9 +46,6 @@ eleventyNavigation:
                 <a class="cs-link" href="">
                     <h3 class="cs-h3">Buckeye Utilities</h3>
                     <img class="cs-icon" loading="lazy" decoding="async" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/Icons/photography-arrow.svg" alt="icon" width="48" height="48">
-                    <p class="cs-text">
-                        Choose from our range of Photo booth options, including open-air to suit your wedding theme and style.
-                    </p>
                 </a>
                 <picture class="cs-picture">
                     <img loading="lazy" decoding="async" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/People/wedding2.jpg" alt="person" width="352" height="440">
@@ -60,9 +56,6 @@ eleventyNavigation:
                 <a class="cs-link" href="">
                     <h3 class="cs-h3">Surprise Utilities</h3>
                     <img class="cs-icon" loading="lazy" decoding="async" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/Icons/photography-arrow.svg" alt="icon" width="48" height="48">
-                    <p class="cs-text">
-                        Choose from our range of Photo booth options, including open-air to suit your wedding theme and style.
-                    </p>
                 </a>
                 <picture class="cs-picture">
                     <img loading="lazy" decoding="async" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/People/photography3.jpeg" alt="person" width="352" height="440">
@@ -73,9 +66,6 @@ eleventyNavigation:
                 <a class="cs-link" href="">
                     <h3 class="cs-h3">Litchfield Park Utilities</h3>
                     <img class="cs-icon" loading="lazy" decoding="async" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/Icons/photography-arrow.svg" alt="icon" width="48" height="48">
-                    <p class="cs-text">
-                        Choose from our range of Photo booth options, including open-air to suit your wedding theme and style.
-                    </p>
                 </a>
                 <picture class="cs-picture">
                     <img loading="lazy" decoding="async" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/People/photography1.jpg" alt="person" width="352" height="440">
@@ -96,9 +86,6 @@ eleventyNavigation:
                 <a class="cs-link" href="">
                     <h3 class="cs-h3">Peoria Utilities</h3>
                     <img class="cs-icon" loading="lazy" decoding="async" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/Icons/photography-arrow.svg" alt="icon" width="48" height="48">
-                    <p class="cs-text">
-                        Choose from our range of Photo booth options, including open-air to suit your wedding theme and style.
-                    </p>
                 </a>
                 <picture class="cs-picture">
                     <img loading="lazy" decoding="async" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/People/wedding2.jpg" alt="person" width="352" height="440">
@@ -109,9 +96,6 @@ eleventyNavigation:
                 <a class="cs-link" href="">
                     <h3 class="cs-h3">Glendale Utilities</h3>
                     <img class="cs-icon" loading="lazy" decoding="async" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/Icons/photography-arrow.svg" alt="icon" width="48" height="48">
-                    <p class="cs-text">
-                        Choose from our range of Photo booth options, including open-air to suit your wedding theme and style.
-                    </p>
                 </a>
                 <picture class="cs-picture">
                     <img loading="lazy" decoding="async" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/People/photography3.jpeg" alt="person" width="352" height="440">
@@ -122,9 +106,6 @@ eleventyNavigation:
                 <a class="cs-link" href="">
                     <h3 class="cs-h3">Phoenix Utilities</h3>
                     <img class="cs-icon" loading="lazy" decoding="async" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/Icons/photography-arrow.svg" alt="icon" width="48" height="48">
-                    <p class="cs-text">
-                        Choose from our range of Photo booth options, including open-air to suit your wedding theme and style.
-                    </p>
                 </a>
                 <picture class="cs-picture">
                     <img loading="lazy" decoding="async" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/People/photography1.jpg" alt="person" width="352" height="440">
@@ -145,9 +126,6 @@ eleventyNavigation:
                 <a class="cs-link" href="">
                     <h3 class="cs-h3">Chandler Utilities</h3>
                     <img class="cs-icon" loading="lazy" decoding="async" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/Icons/photography-arrow.svg" alt="icon" width="48" height="48">
-                    <p class="cs-text">
-                        Choose from our range of Photo booth options, including open-air to suit your wedding theme and style.
-                    </p>
                 </a>
                 <picture class="cs-picture">
                     <img loading="lazy" decoding="async" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/People/wedding2.jpg" alt="person" width="352" height="440">
@@ -158,9 +136,6 @@ eleventyNavigation:
                 <a class="cs-link" href="">
                     <h3 class="cs-h3">Mesa Utilities</h3>
                     <img class="cs-icon" loading="lazy" decoding="async" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/Icons/photography-arrow.svg" alt="icon" width="48" height="48">
-                    <p class="cs-text">
-                        Choose from our range of Photo booth options, including open-air to suit your wedding theme and style.
-                    </p>
                 </a>
                 <picture class="cs-picture">
                     <img loading="lazy" decoding="async" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/People/photography3.jpeg" alt="person" width="352" height="440">
@@ -171,9 +146,6 @@ eleventyNavigation:
                 <a class="cs-link" href="">
                     <h3 class="cs-h3">Tempe</h3>
                     <img class="cs-icon" loading="lazy" decoding="async" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/Icons/photography-arrow.svg" alt="icon" width="48" height="48">
-                    <p class="cs-text">
-                        Choose from our range of Photo booth options, including open-air to suit your wedding theme and style.
-                    </p>
                 </a>
                 <picture class="cs-picture">
                     <img loading="lazy" decoding="async" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/People/photography1.jpg" alt="person" width="352" height="440">
@@ -183,7 +155,5 @@ eleventyNavigation:
     </div>
 </section>
                                 
-
-    {% include 'components/cta.html' %}
 
 {% endblock %}
