--- a/src/index.html
+++ b/src/index.html
@@ -78,52 +78,65 @@ eleventyNavigation:
 <!--                    Hero                      -->
 <!-- ============================================ -->
 
-<section id="hero-1298">
+<section id="hero-1839">
     <div class="cs-container">
         <div class="cs-content">
             <span class="cs-topper">SunSeeker Rentals Property Management</span>
             <h1 class="cs-title">Need help leasing your home?</h1>
             <p class="cs-text">
-                Look no further than SunSeeker Rentals, your trusted partner in property management. Whether you're a seasoned landlord or new to the rental market, our dedicated team is here to streamline the leasing process and maximize your property's potential.
+                Look no further than SunSeeker Rentals, your trusted partner in property management. Whether you're a seasoned landlord or new to the rental market, our dedicated team is here to streamline the management process and maximize your property's potential.
             </p>
-            <a href="https://calendly.com/sunseeker-rentals/property-management-call" target="_blank" class="cs-button-solid">Schedule A Phone Call</a>
+            <div class="cs-button-group">
+                <a href="https://calendly.com/sunseeker-rentals/property-management-call" target="_blank" class="cs-button-solid">Schedule A Phone Call</a>
+            </div>
         </div>
-    </div>
-    <div class="cs-container">
         <ul class="cs-card-group">
             <li class="cs-item">
-                <a href="/contact" class="cs-link">
+                <picture class="cs-picture">
+                    <!--Mobile Image-->
+                    <source media="(max-width: 600px)" srcset="/assets/images/rental-value.png">
+                    <!--Tablet and above Image-->
+                    <source media="(min-width: 601px)" srcset="/assets/images/rental-value.png">
+                    <img loading="lazy" decoding="async" src="/assets/images/rental-value.png" alt="icon" width="48" height="48">
+                </picture>
+                <div class="cs-info">
                     <h3 class="cs-h3">Discover the Value of Your Rental</h3>
                     <p class="cs-item-text">
-                        Schedule a free consultation where we visit your property, assess its condition, and provide an expert rental price estimate — no strings attached.
+                        Schedule a free consultation where we visit your property, assess its condition, and provide an expert rental price estimate with no strings attached.
                     </p>
-                </a>
+                    <a href="/contact" class="cs-link">
+                        Learn More
+                        <img class="cs-arrow" loading="lazy" decoding="async" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/Icons/chevron-right-red.svg" alt="icon" width="20" height="20" aria-hidden="true">
+                    </a>
+                </div>
             </li>
             <li class="cs-item">
-                <a href="/about" target="_blank" class="cs-link">
+                <picture class="cs-picture">
+                    <!--Mobile Image-->
+                    <source media="(max-width: 600px)" srcset="/assets/images/full-service-management.png">
+                    <!--Tablet and above Image-->
+                    <source media="(min-width: 601px)" srcset="/assets/images/full-service-management.png">
+                    <img loading="lazy" decoding="async" src="/assets/images/full-service-management.png" alt="icon" width="48" height="48">
+                </picture>
+                <div class="cs-info">
                     <h3 class="cs-h3">Full-Service Management for Homeowners</h3>
                     <p class="cs-item-text">
                         From marketing and tenant screening to maintenance and rent collection. We handle every detail so you can enjoy passive income without the hassle.
                     </p>
-                </a>
-            </li>
-            <li class="cs-item">
-                <a href="/" class="cs-link">
-                    <h3 class="cs-h3">Non-Management Tenant Placement Services</h3>
-                    <p class="cs-item-text">
-                        Prefer to manage the property yourself? We’ll handle marketing, showings, screening, and lease signing — so you get a great tenant, without the legwork.
-                    </p>
-                </a>
+                    <a href="/about" class="cs-link">
+                        Learn More
+                        <img class="cs-arrow" loading="lazy" decoding="async" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/Icons/chevron-right-red.svg" alt="icon" width="20" height="20" aria-hidden="true">
+                    </a>
+                </div>
             </li>
         </ul>
     </div>
-    <!--Background Image, background image added in CSS at 1600px wide for parallax effect-->
+
+    <!-- Background Image -->
     <picture class="cs-background">
-        <!--Mobile Image-->
-        <source media="(max-width: 1023px)" srcset="/assets/images/hero-m.png">
-        <!--Tablet and above Image-->
-        <source media="(min-width: 1024px)" srcset="/assets/images/hero.png">
-        <img loading="lazy" decoding="async" src="/assets/images/hero.png" alt="buildings" width="1280" height="568">
+        <source media="(max-width: 600px)" srcset="/assets/images/hero-m.png">
+        <source media="(min-width: 601px)" srcset="/assets/images/hero.png">
+        <img loading="lazy" decoding="async" src="/assets/images/hero.png" alt="field" width="1920" height="1200" aria-hidden="true">
     </picture>
 </section>
 
@@ -134,9 +147,9 @@ eleventyNavigation:
 <section id="stats-539">
     <div class="cs-container">
         <div class="cs-content">
-            <span class="cs-topper">Why Choose Us for Property Management?</span>
-            <h2 class="cs-title">Property management for the entire
-                <span class="cs-color"> Phoenix metro area!</span></h2>
+            <span class="cs-topper">Why Choose SunSeeker Rentals?</span>
+            <h2 class="cs-title">Trusted Property Management 
+                <span class="cs-color">Across the Valley</span></h2>
             <p class="cs-text">
                 We deliver full-service property management across the Phoenix metro and surrounding areas. With clear, competitive pricing and no hidden fees, we make owning rental property simple and stress-free. Expect reliable communication, expert guidance, and a team that treats your property like their own.            </p>
         </div>
