--- a/src/content/pages/owners.html
+++ b/src/content/pages/owners.html
@@ -26,13 +26,14 @@ eleventyNavigation:
 <section id="services-1354">
     <div class="cs-container">
         <div class="cs-content">
-            <span class="cs-topper">Our Services</span>
-            <h2 class="cs-title">We’re Committed to Deliver Top High Quality Services</h2>
+            <span class="cs-topper">Owners Page</span>
+            <h2 class="cs-title">Access Financials, Reports, and More</h2>
+            <div class="cs-text">Log in to view statements, monitor property performance, and access important documents.</div>
         </div>
         <ul class="cs-card-group">
             <li class="cs-item">
-                <a href="" class="cs-link">
-                    <h3 class="cs-h3"><span class="cs-span">View Owners</span> Account</h3>
+                <a href="https://sunseeker.appfolio.com/oportal/users/log_in" class="cs-link" target="_blank">
+                    <h3 class="cs-h3"><span class="cs-span">Owner</span> Login</h3>
                 </a>
                 <picture class="cs-background">
                     <source media="(max-width: 600px)" srcset="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/People/meeting1.jpg">
@@ -41,40 +42,17 @@ eleventyNavigation:
                 </picture>
             </li>
             <li class="cs-item">
-                <a href="https://sunseeker.appfolio.com/connect/users/sign_in" class="cs-link">
-                    <h3 class="cs-h3"><span class="cs-span">Tenant</span> Portal</h3>
-                </a>
-                <picture class="cs-background">
-                    <source media="(max-width: 600px)" srcset="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/People/meeting2.jpg">
-                    <source media="(min-width: 601px)" srcset="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/People/meeting2.jpg">
-                    <img decoding="async" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/People/meeting2.jpg" alt="construction" width="305" height="305" aria-hidden="true">
-                </picture>
-            </li>
-            <li class="cs-item">
                 <a href="" class="cs-link">
-                    <h3 class="cs-h3"><span class="cs-span">Operational</span> Excellence</h3>
+                    <h3 class="cs-h3"><span class="cs-span">View</span> Statements</h3>
                 </a>
                 <picture class="cs-background">
-                    <source media="(max-width: 600px)" srcset="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/People/meeting3.jpg">
-                    <source media="(min-width: 601px)" srcset="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/People/meeting3.jpg">
-                    <img decoding="async" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/People/meeting3.jpg" alt="construction" width="305" height="305" aria-hidden="true">
-                </picture>
-            </li>
-            <li class="cs-item">
-                <a href="" class="cs-link">
-                    <h3 class="cs-h3"><span class="cs-span">Lifetime</span> Maintenance</h3>
-                </a>
-                <picture class="cs-background">
-                    <source media="(max-width: 600px)" srcset="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/People/meeting4.jpg">
-                    <source media="(min-width: 601px)" srcset="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/People/meeting4.jpg">
-                    <img decoding="async" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/People/meeting4.jpg" alt="construction" width="305" height="305" aria-hidden="true">
+                    <source media="(max-width: 600px)" srcset="/assets/images/statement.png">
+                    <source media="(min-width: 601px)" srcset="/assets/images/statement.png">
+                    <img decoding="async" src="/assets/images/statement.png" alt="construction" width="305" height="305" aria-hidden="true">
                 </picture>
             </li>
         </ul>
     </div>
 </section>
-
-
-    {% include 'components/cta.html' %}
 
 {% endblock %}
