--- a/src/content/pages/rentals.html
+++ b/src/content/pages/rentals.html
@@ -30,7 +30,7 @@ eleventyNavigation:
       //propertyGroup: 'My Group Name',
       themeColor: '#676767',
       height: '575px',
-      width: '100%'
+      width: '100%',
     });
   </script>
 
